protected populate plugin deleted

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@strapi/plugin-documentation": "^4.9.0",
+    "@strapi/plugin-graphql": "^4.9.0",
     "@strapi/plugin-i18n": "4.9.0",
     "@strapi/plugin-users-permissions": "4.9.0",
     "@strapi/strapi": "4.9.0",
     "better-sqlite3": "8.0.1",
+    "mysql": "^2.18.1",
     "strapi-plugin-duplicate-button": "^1.1.7",
-    "strapi-plugin-populate-deep": "^2.0.0",
-    "strapi-plugin-protected-populate": "^1.2.0"
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
