--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-documentation": "^4.9.0",
-    "@strapi/plugin-graphql": "^4.9.0",
-    "@strapi/plugin-i18n": "4.9.0",
-    "@strapi/plugin-users-permissions": "4.9.0",
-    "@strapi/strapi": "4.9.0",
+    "@strapi/plugin-documentation": "^4.10.6",
+    "@strapi/plugin-graphql": "^4.10.6",
+    "@strapi/plugin-i18n": "4.10.6",
+    "@strapi/plugin-users-permissions": "4.10.6",
+    "@strapi/provider-email-mailgun": "^4.10.6",
+    "@strapi/strapi": "4.10.6",
     "better-sqlite3": "8.0.1",
     "mysql": "^2.18.1",
     "strapi-plugin-duplicate-button": "^1.1.7",
-    "strapi-plugin-populate-deep": "^2.0.0"
+    "strapi-plugin-populate-deep": "^2.0.0",
+    "strapi-provider-email-resend": "^1.0.4"
   },
   "author": {
     "name": "A Strapi developer"
